Make the NAM extensions JDK 21 compatible